--- a/source/styles/blocks/logo-container.scss
+++ b/source/styles/blocks/logo-container.scss
@@ -21,7 +21,7 @@
   box-sizing: border-box;
   background-size: 24px;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: right;
   background-color: transparent;
   border: 0;
 
