--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -35,5 +35,6 @@
 @import "./blocks/addition-gift.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/subscribe-form.scss";
+@import "./blocks/program.scss";
 
 // styles.scss
