--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,7 +1,8 @@
 .features {
   box-sizing: border-box;
   margin: 0;
-  padding: 0 20px 29px;
+  padding: 0 20px;
+  margin-bottom: 69px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
