--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -6,7 +6,6 @@
   margin: 0;
   margin-left: -20px;
   padding: 0;
-  position: absolute;
   display: flex;
   z-index: 3;
 
@@ -15,7 +14,6 @@
     flex-direction: row;
     gap: 35px;
     background-color: transparent;
-    position: relative;
     margin-left: 0;
     margin-right: 4px;
     margin-top: 1px;
@@ -33,6 +31,10 @@
   @media (min-width: $tablet-width) {
     display: flex;
   }
+}
+
+.navigation__list--visible {
+  position: absolute;
 }
 
 .navigation__item {
