--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -2,6 +2,7 @@
 /* брейкпоинты */
 $tablet-width: 768px;
 $desktop-width: 1440px;
+$client-width: calc($desktop-width - 17px);
 
 /* переменные шрифтов */
 $primary-font: "Lato", "Arial", sans-serif;
