--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -12,6 +12,10 @@
   @media (min-width: $tablet-width) {
     height: 400px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+  }
 }
 
 .contacts__container {
