--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -17,3 +17,12 @@
     grid-template-rows: 1fr auto;
   }
 }
+
+.page--index .header {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+  }
+}
