--- a/source/styles/blocks/contacts-map.scss
+++ b/source/styles/blocks/contacts-map.scss
@@ -1,7 +1,7 @@
 .contacts-map__pic {
   display: flex;
   justify-content: center;
-  max-width: 100%;
+  max-width: $desktop-width;
   margin: 0 auto;
 }
 
